@@ -7,6 +7,7 @@ Changelog
 - Add documentation for sharing endpoint. [njohner]
 - Always request UID from solr, as it is needed for snippets. [njohner]
 - Speed up validation of dossier resolution preconditions. [njohner]
+- Generally disallow to move proposals outside of its main dossier. [elioschmutz]
 - Add tabbedview move action for proposals. [elioschmutz]
 
 
